--- a/flask/static/main.css
+++ b/flask/static/main.css
@@ -94,6 +94,10 @@ a.article-title:hover {
   padding-bottom: 5px;
 }
 
+.pad2x {
+  padding-bottom: 10px;
+}
+
 .slider {
   -webkit-appearance: none;
   width: 100%;
