Almost done adding ML to site

--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -30,7 +30,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="/">Map</a>
+              <a class="nav-item nav-link" href="/map">Map</a>
+              <a class="nav-item nav-link" href="/ml">ML Predictor</a>
             </div>
           </div>
         </div>
